--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
     "@grpc/grpc-js": "^1.6.8",
     "@grpc/proto-loader": "^0.7.0",
     "axios": "^0.27.2",
-    "express": "^4.18.1"
+    "crypto": "^1.0.1",
+    "express": "^4.18.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@tsconfig/node12": "^1.0.11",
     "@types/express": "^4.17.13",
     "@types/node": "^15.0.3",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "eslint": "^8.20.0",
