--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "lint:eslint": "eslint . --ext .js,.ts",
     "lint:fix": "npm run lint:fix:prettier && npm run lint:eslint -- --fix",
     "lint:fix:prettier": "prettier --write '**/*.{ts,tsx,js,json,svg,md,yml}'",
-    "start:grpc": "node ./grpc-server/server",
-    "start:http": "node ./http-server/server",
-    "start:http:google": "node ./http-server-google/server",
-    "start:http:okta": "node ./http-server-okta/server",
-    "start:client": "node ./client/index"
+    "start:grpc": "nodemon ./grpc-server/server",
+    "start:http": "nodemon ./http-server/server",
+    "start:http:google": "nodemon ./http-server-google/server",
+    "start:http:okta": "nodemon ./http-server-okta/server",
+    "start:client": "node ./client/index",
+    "start:all": "npm-run-all start:grpc start:http start:http:google start:http:okta --parallel"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.6.8",
@@ -41,6 +42,8 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "nodemon": "^2.0.19",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   },
